# sprite-opera

./: .gitignore  CMakeLists.txt  ImageData.tpp  README.md  binarymask.cpp  glwidget.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  math.cpp  normalmapgenerator.cpp  sprite.cpp  spriteopera.cpp  spriteopera.h  stringcreator.cpp  virtualspritesheettreewidgetitem.cpp
include/: IImageData.hpp  ImageData.hpp  binarymask.hpp  glwidget.h  mainwindow.h  math.hpp  normalmapgenerator.hpp  sprite.h  sprite.hpp  spriteopera.h  stringcreator.hpp  virtualspritesheettreewidgetitem.h
include/stb/: stb_image.h
